fix: Add text-align to the this line

--- a/foundations/01-css-methods/styles.css
+++ b/foundations/01-css-methods/styles.css
@@ -3,4 +3,5 @@ div {
     color: white;
     font-size: 32px;
     font-weight: bold;
+    text-align: center;
 }
